--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -47,16 +47,14 @@
                     <MenuItem Header="Console" Click="ShowConsole" Foreground="White"/>
                 </Menu>
 
-                <ComboBox Foreground="White" Name="BreedsBox" Margin="170,0,0,10" Grid.Row="0" Grid.RowSpan="2" Height="25" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="156" SelectionChanged="BreedsChanged">
+                <ComboBox Name="BreedsBox" Margin="170,0,0,10" Grid.Row="0" Grid.RowSpan="2" Height="25" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="156" SelectionChanged="BreedsChanged" BorderBrush="Black" Background="Black">
                     <ComboBox.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+
                         <SolidColorBrush x:Key="{x:Static SystemColors.WindowBrushKey}" Color="#3d3d3d" />
                     </ComboBox.Resources>
-                    <ComboBox.Background>
-                        <LinearGradientBrush EndPoint="0,1">
-                            <GradientStop Color="#FFF0F0F0"/>
-                            <GradientStop Color="#3d3d3d" Offset="1"/>
-                        </LinearGradientBrush>
-                    </ComboBox.Background>
                 </ComboBox>
                 <Label Foreground="White" Content="Breed:" HorizontalAlignment="Left" Margin="122,0,0,10" VerticalAlignment="Bottom" Grid.Row="0" Grid.RowSpan="2"/>
                 <Label Foreground="White" Content="Voting:" Margin="341,0,0,10" VerticalAlignment="Bottom" Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Left" Width="47"/>
@@ -106,35 +104,13 @@
         </Style>
         <!--submenu style try-->
         <Style x:Key="TopLevelHeaderStyle" TargetType="MenuItem">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type MenuItem}">
-                        <Border x:Name="MenuItemBorder">
-                            <Grid VerticalAlignment="Center">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-                                <ContentPresenter Content="{TemplateBinding Header}" ContentSource="Header" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                                <Popup Grid.Column="0" AllowsTransparency="True" IsOpen="{Binding IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}" Placement="Bottom" PlacementTarget="{Binding ElementName=MenuItemBorder}"
-                                       HorizontalOffset="1" VerticalOffset="-1">
-                                    <Border BorderBrush="#414141" Background="#414141">
-                                        <ScrollViewer Style="{DynamicResource {ComponentResourceKey ResourceId=MenuScrollViewer, TypeInTargetAssembly={x:Type FrameworkElement}}}">
-                                            <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                                        </ScrollViewer>
-                                    </Border>
-                                </Popup>
-                            </Grid>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <EventTrigger RoutedEvent="MouseEnter">
-                                <EventTrigger.Actions>
-                                </EventTrigger.Actions>
-                            </EventTrigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
+           
         </Style>
+        <!--combo box togle button-->
+        <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="ToggleButton">
+            <Grid>
+                
+            </Grid>
+        </ControlTemplate>
     </Window.Resources>
 </Window>
